--- a/index.html
+++ b/index.html
@@ -1,21 +1,1 @@
-{
-
-  "trangTính1": [
-
-    {
-
-      "update": "yesc",
-
-      "link": "https://www.youtube.com/watch?v=L6xfeBhdulg",
-
-      "mess": "Đã Có Cập Nhật Mới, Bạn Hãy Lên Kênh YT Thắng DZ Để Tải Ngay Bây Giờ !!!",
-
-      "title": "Lưu Ý",
-
-      "id": 2
-
-    }
-
-  ]
-
-}
+[{"update":"yesc","link":"https:\/\/www.youtube.com\/watch?v=L6xfeBhdulg","mess":"\u0110\u00e3 C\u00f3 C\u1eadp Nh\u1eadt M\u1edbi, B\u1ea1n H\u00e3y L\u00ean K\u00eanh YT Th\u1eafng DZ \u0110\u1ec3 T\u1ea3i Ngay B\u00e2y Gi\u1edd !!!","title":"L\u01b0u \u00dd"}]
