--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-[{"update":"yes","link":"https://www.youtube.com/channel/UCF8F5i0VZz0BMg9FnEqsg7g","mess":"Phiên bản này đã hết hạn, ae vui lòng chờ bản mới !!","title":"Đến Kênh YT"}]
+[{"update":"yes","link":"https://www.youtube.com/channel/UCF8F5i0VZz0BMg9FnEqsg7g","mess":"Phiên bản này đã hết hạn, ae vui lòng chờ bản mới !!","title":"LƯU Ý"}]
