--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 [{
 "update":"yes","link":"https://www.youtube.com/channel/UCF8F5i0VZz0BMg9FnEqsg7g","mess":"Phiên bản này đã hết hạn, ae vui lòng chờ bản mới !!","title":"LƯU Ý",
-"update1":"yes","link1":"MMB0BMg9FnEqsg7g","mess1":"VXVhạn, ae vui lòng chờ bản mới !!","title1":"LƯU Ý"
+"update1":"yces","link1":"MMB0BMg9FnEqsg7g","mess1":"VXVhạn, ae vui lòng chờ bản mới !!","title1":"LƯU Ý"
 }]
