--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 [{
 "update":"yes","link":"https://www.youtube.com/channel/UCF8F5i0VZz0BMg9FnEqsg7g","mess":"Phiên bản này đã hết hạn, ae vui lòng chờ bản mới !!","title":"LƯU Ý",
-"update1":"yes","link1":"https://mneylink.com/6NWkh","mess1":"Update lên 1.93.5 + Fix Nút OK Android 6-10","title1":"Có Cập Nhập Mới!"
-"update2":"yeFs","link2":"https://mneylink.com/6NWkh","mess2":"Update lên 1.93.5 + Fix Nút OK Android 6-10","title2":"Có Cập Nhập Mới!"
+"update1":"yes","link1":"","mess1":"Update lên 1.93.5 + Fix Nút OK Android 6-10","title1":"Có Cập Nhập Mới!"
+"update2":"yeFs","link2":"","mess2":"Update lên 1.93.5 + Fix Nút OK Android 6-10","title2":"Có Cập Nhập Mới!"
 }]
