--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 "update":"yes","link":"https://www.youtube.com/channel/UCF8F5i0VZz0BMg9FnEqsg7g","mess":"Phiên bản này đã hết hạn, ae vui lòng chờ bản mới !!","title":"LƯU Ý",
 "update1":"yes","link1":"https://mneylink.com/eGR654","mess1":"Update lên 1.93.5 + Fix Nút OK Android 6-10","title1":"Có Cập Nhập Mới!",
 "update2":"yes","link2":"https://mneylink.com/YBt04B","mess2":"Fix Headshot + Fix Tàn Hình Máy Android 6-10","title2":"Có Cập Nhập Mới!",
-"update3":"yesf","link3":"na","mess3":"","title3":"Có Cập Nhập Mới!"
+"update3":"yesf","link3":"na","mess3":"","title3":"Có Cập Nhập Mới!",
+"update4":"yesf","link4":"na","mess4":"","title4":"Có Cập Nhập Mới!"
 }]
