--- a/index.html
+++ b/index.html
@@ -4,4 +4,5 @@
 "update2":"yes","link2":"https://mneylink.com/YBt04B","mess2":"Fix Headshot + Fix Tàn Hình Máy Android 6-10","title2":"Có Cập Nhập Mới!",
 "update3":"yes","link3":"https://mneylink.com/aHdADN","mess3":"Fix Loading Khi Vào Game","title3":"Có Cập Nhập Mới!",
 "update4":"yesf","link4":"na","mess4":"","title4":"Có Cập Nhập Mới!"
+"update5":"yesf","link5":"na","mess5":"","title5":"Có Cập Nhập Mới!"
 }]
