--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 "update1":"yes","link1":"https://mneylink.com/eGR654","mess1":"Update lên 1.93.5 + Fix Nút OK Android 6-10","title1":"Có Cập Nhập Mới!",
 "update2":"yes","link2":"https://mneylink.com/YBt04B","mess2":"Fix Headshot + Fix Tàn Hình Máy Android 6-10","title2":"Có Cập Nhập Mới!",
 "update3":"yes","link3":"https://mneylink.com/aHdADN","mess3":"Fix Loading Khi Vào Game","title3":"Có Cập Nhập Mới!",
-"update4":"yesf","link4":"na","mess4":"","title4":"Có Cập Nhập Mới!",
+"update4":"yes","link4":"https://youtu.be/C5VyWK_xK18 ","mess4":"Đã Có V41 Mời Ae Tải Về","title4":"Có Cập Nhập Mới!",
 "update5":"yesf","link5":"na","mess5":"","title5":"Có Cập Nhập Mới!"
 }]
