--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 "update2":"yes","link2":"https://mneylink.com/YBt04B","mess2":"Fix Headshot + Fix Tàn Hình Máy Android 6-10","title2":"Có Cập Nhập Mới!",
 "update3":"yes","link3":"https://mneylink.com/aHdADN","mess3":"Fix Loading Khi Vào Game","title3":"Có Cập Nhập Mới!",
 "update4":"yes","link4":"https://youtu.be/C5VyWK_xK18 ","mess4":"Đã Có V41 Mời Ae Tải Về","title4":"Có Cập Nhập Mới!",
-"update5":"yes","link5":"https://i.imgur.com/rFiQlnQ.jpg","mess5":"Update bản 1.93.6 nhé!!","title5":"Có Cập Nhập Mới!",
+"update5":"yes","link5":"https://www.youtube.com/watch?v=T800dkDTHUY","mess5":"Tải ngay update bản 1.93.6 nào!!","title5":"Có Cập Nhập Mới!",
 "update6":"yesn","link6":"https://i.imgur.com/rFiQlnQ.jpg","mess6":"Update bản 1.93.6 nhé!!","title6":"Có Cập Nhập Mới!"
 }]
