--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 "update3":"yes","link3":"https://mneylink.com/aHdADN","mess3":"Fix Loading Khi Vào Game","title3":"Có Cập Nhập Mới!",
 "update4":"yes","link4":"https://youtu.be/C5VyWK_xK18 ","mess4":"Đã Có V41 Mời Ae Tải Về","title4":"Có Cập Nhập Mới!",
 "update5":"yes","link5":"https://www.youtube.com/watch?v=T800dkDTHUY","mess5":"Tải ngay update bản 1.93.6 nào!!","title5":"Có Cập Nhập Mới!",
-"update6":"yes","link6":"https://i.imgur.com/rFiQlnQ.jpg","mess6":"Đã Fix Tàn Hình, Tải Bản Mới Ngay!!","title6":"Có Cập Nhập Mới!",
+"update6":"yes","link6":"https://mneylink.com/j6Rx","mess6":"Đã Fix Tàn Hình, Tải Bản Mới Ngay!!","title6":"Có Cập Nhập Mới!",
 "update7":"yesn","link7":"https://i.imgur.com/rFiQlnQ.jpg","mess7":"z","title7":"Có Cập Nhập Mới!"
 }]
