--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 [{
-"update1":"y","link1":"https://i.imgur.com/rFiQlnQ.jpg","mess1":"z"
+"update1":"yz","link1":"https://i.imgur.com/rFiQlnQ.jpg","mess1":"z"
 }]
