--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 [{
-"update1":"y","link1":"https://www.youtube.com/channel/UCF8F5i0VZz0BMg9FnEqsg7g/","mess1":"Phiên bản đang gặp sự cố, vui lòng chờ bản V45"
+"update1":"y","link1":"https://www.youtube.com/channel/UCF8F5i0VZz0BMg9FnEqsg7g/","mess1":"Phiên bản đang gặp sự cố, vui lòng chờ bản V45",
 "update2":"yz","link2":"https://i.imgur.com/rFiQlnQ.jpg","mess2":"z"
 }]
