--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 "update1":"y","link1":"https://www.youtube.com/channel/UCF8F5i0VZz0BMg9FnEqsg7g/","mess1":"Phiên bản đang gặp sự cố, vui lòng chờ bản V45",
 "update2":"y","link2":"https://www.youtube.com/channel/UCF8F5i0VZz0BMg9FnEqsg7g","mess2":"Đã có phiên bản mới, ae vào video mới nhất để tải nha!!!",
 "update3":"y","link3":"https://www.youtube.com/channel/UCF8F5i0VZz0BMg9FnEqsg7g","mess3":"Đã có phiên bản mới, ae vào video mới nhất để tải nha!",
-"update34":"y6","link4":"https://www.youtube.com/channel/UCF8F5i0VZz0BMg9FnEqsg7g","mess4":"Đã có phiên bản mới, ae vào video mới nhất để tải nha!",
+"update4":"y6","link4":"https://www.youtube.com/channel/UCF8F5i0VZz0BMg9FnEqsg7g","mess4":"Đã có phiên bản mới, ae vào video mới nhất để tải nha!"
 }]
