--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 "update2":"y","link2":"https://www.youtube.com/channel/UCF8F5i0VZz0BMg9FnEqsg7g","mess2":"Đã có phiên bản mới, ae vào video mới nhất để tải nha!!!",
 "update3":"y","link3":"https://www.youtube.com/channel/UCF8F5i0VZz0BMg9FnEqsg7g","mess3":"Đã có phiên bản mới, ae vào video mới nhất để tải nha!",
 "update4":"y","link4":"https://www.youtube.com/channel/UCF8F5i0VZz0BMg9FnEqsg7g","mess4":"Đã có phiên bản mới, ae vào video mới nhất để tải nha!",
-"update5":"y6","link5":"https://www.youtube.com/channel/UCF8F5i0VZz0BMg9FnEqsg7g","mess5":"Đã có phiên bản mới, ae vào video mới nhất để tải nha!"
+"update5":"y6","link5":"https://www.youtube.com/channel/UCF8F5i0VZz0BMg9FnEqsg7g","mess5":"Đã có phiên bản mới, ae vào video mới nhất để tải nha!",
+"newupdate":"y","toast":"","title":"","mess":"","ok":"","linkyt":"","exit":""
 }]
