--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 "update3":"y","link3":"https://www.youtube.com/channel/UCF8F5i0VZz0BMg9FnEqsg7g","mess3":"Đã có phiên bản mới, ae vào video mới nhất để tải nha!",
 "update4":"y","link4":"https://www.youtube.com/channel/UCF8F5i0VZz0BMg9FnEqsg7g","mess4":"Đã có phiên bản mới, ae vào video mới nhất để tải nha!",
 "update5":"y6","link5":"https://www.youtube.com/channel/UCF8F5i0VZz0BMg9FnEqsg7g","mess5":"Đã có phiên bản mới, ae vào video mới nhất để tải nha!",
-"newupdate":"y4","toast":"Có bản cập nhật mới","title":"Lưu ý","mess":"Đã có bản mod menu mới, ae tải ngay nhé","ok":"Triển luôn","linkyt":"","exit":"Để lúc khác"
+"newupdate":"y4","toast":"Có bản cập nhật mới","title":"Lưu ý","mess":"Đã có bản mod menu mới, ae tải ngay nhé","ok":"Triển luôn","linkyt":"","exit":"Để lúc khác",
+"everdaykey":"FREEID1415"
 }]
