--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 [{
-"update1":"y","link1":"https://www.youtube.com/channel/UCF8F5i0VZz0BMg9FnEqsg7g/","mess1":"Phiên bản đang gặp sự cố, vui lòng chờ bản V45"
+"checkupdate":"yes","title":"https://www.youtube.com/channel/UCF8F5i0VZz0BMg9FnEqsg7g/","message":"Phiên bản đang gặp sự cố, vui lòng chờ bản V45","ok":"Thoát","cancel":"Vào Kênh Youtube thắng dz","neutral":"tham gia box zalo nhận thông báo"
 }]
