--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 [{
-"checkupdate":"yes","title":"https://www.youtube.com/channel/UCF8F5i0VZz0BMg9FnEqsg7g/","message":"Phiên bản đang gặp sự cố, vui lòng chờ bản V45","ok":"Thoát","cancel":"Vào Kênh Youtube thắng dz","neutral":"tham gia box zalo nhận thông báo"
+"checkupdate":"yes","title":"Lưu Ý","message":"Đã có bản mới TSM TEAM, bạn hãy vào box zalo hoặc kênh youtube để tải nhé","ok":"Thoát","cancel":"Vào Kênh Youtube thắng dz","neutral":"tham gia box zalo"
 }]
