--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 [{
-"checkupdate":"yevs","title":"Lưu Ý","message":"Đã có bản mới TSM TEAM, bạn hãy vào box zalo hoặc kênh youtube để tải nhé","ok":"Thoát","cancel":"Youtube thắng dz","neutral":"tham gia box zalo"
+"checkupdate":"yes","title":"Lưu Ý","message":"ĐÓNG SERVER BẢN TÉT","ok":"Thoát","cancel":"Youtube thắng dz","neutral":"tham gia box zalo"
 }]
