--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 [{
-"checkupdate":"yes","title":"Lưu Ý","message":"Đóng server bị nay bị chởi nhiều hơi bùn :(. Mai chơi tiếp nha","ok":"Thoát","cancel":"Youtube thắng dz","neutral":"tham gia box zalo","checkupdate2":"fsdyces"
+"checkupdate":"yes","title":"Lưu Ý","message":"Đóng server bị nay bị chởi nhiều hơi bùn :(. Mai chơi tiếp nha","ok":"Thoát","cancel":"Youtube thắng dz","neutral":"tham gia box zalo","checkupdate2":"yes"
 }]
