--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 [{
-"checkupdate":"yes","title":"Lưu Ý","message":"Đóng server bị nay bị chởi nhiều hơi bùn :(. Mai chơi tiếp nha","ok":"Thoát","cancel":"Youtube thắng dz","neutral":"tham gia box zalo","checkupdate2":"yyes"
+"checkupdate":"yes","title":"Lưu Ý","message":"Sorry ae nay bị mấy bạn nào đó ăn híp nên mod hơi lỗi tí, ae zô box tải nhá (ko cần vượt link)","ok":"Thoát","cancel":"Youtube thắng dz","neutral":"tham gia box zalo","checkupdate2":"yes"
 }]
